--- a/SuperMarket_Client/appsettings.json
+++ b/SuperMarket_Client/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlconnect": "server=.;database=SuperMarketDB;uid=sa;pwd=123"
+  }
 }
