--- a/SuperMarket_Data/SuperMarket_DataAccess.csproj
+++ b/SuperMarket_Data/SuperMarket_DataAccess.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SuperMarket_Models\SuperMarket_Models.csproj" />
+  </ItemGroup>
+
 </Project>
