--- a/SuperMarket_Client/appsettings.json
+++ b/SuperMarket_Client/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlconnect": "server=.;database=SuperMarketDB;uid=sa;pwd=123"
+    "sqlconnect": "server=.;database=SuperMarketDB;uid=sa;pwd=123",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SuperMarket_Client;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
