--- a/SuperMarket_Client/SuperMarket_Client.csproj
+++ b/SuperMarket_Client/SuperMarket_Client.csproj
@@ -35,6 +35,7 @@
     <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Admin\Views\Admin\" />
     <Folder Include="wwwroot\Asset\" />
+    <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
 </Project>
