--- a/SuperMarket_Client/appsettings.json
+++ b/SuperMarket_Client/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlconnect": "server=DESKTOP-ON9PIAE\\SQLEXPRESS;database=SuperMarketDB;uid=sa;pwd=123",
-    //"sqlconnect": "server=.;database=SuperMarketDB;uid=sa;pwd=123",
+    //"sqlconnect": "server=DESKTOP-ON9PIAE\\SQLEXPRESS;database=SuperMarketDB;uid=sa;pwd=123",
+    "sqlconnect": "server=.;database=SuperMarketDB;uid=sa;pwd=123",
 
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SuperMarket_Client;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
