--- a/SuperMarket_Client/SuperMarket_Client.csproj
+++ b/SuperMarket_Client/SuperMarket_Client.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\SuperMarket_Utility\SuperMarket_Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\ProductImage\" />
+  </ItemGroup>
+
 </Project>
