--- a/SuperMarket_Client/SuperMarket_Client.csproj
+++ b/SuperMarket_Client/SuperMarket_Client.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\Images\CategoryImage\" />
     <Folder Include="wwwroot\Images\ProductImage\" />
   </ItemGroup>
 
